fixed some bugs + realigned images + updated team members

--- a/assets/pages.css
+++ b/assets/pages.css
@@ -36,3 +36,11 @@
 .team .lead {
 	text-align:center;
 }
+@media (min-width:767px) {
+.gen {
+	margin-top:100px;
+	}
+	}
+.morph-button {
+	height:0px;
+	}
